[tool.poetry]
name = "install-poetry-project"
version = "0.1.0"
description = ""
authors = ["Trim21 <i@trim21.me>"]

[tool.poetry.dependencies]
python = "^3.6.1"

requests = {version="^2.23.0",optional=true}
pre-commit = { version = "==2.4.0", optional = true }

[tool.poetry.extras]
group1 = ['requests']
group2 = ['pre-commit']

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
